--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Sep 10 01:01:30 IST 2022
-sdk.dir=C\:\\Users\\Chandan Singha\\AppData\\Local\\Android\\Sdk
+#Tue Sep 13 12:15:14 IST 2022
+sdk.dir=C\:\\Users\\Anant\\AppData\\Local\\Android\\Sdk
